[package]
name = "oscar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
convert_case = "0.11.0"
egui-wgpu = "0.34.2"
epaint = "0.34.2"
image = "0.25.10"
log = "0.4.29"
mlua = { version = "0.11.6", features = ["serde", "luau", "anyhow", "macros"] }
pollster = "0.4.0"
rosc = "0.11.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simple_logger = "5.2.0"
strum = "0.28.0"
strum_macros = "0.28.0"
wgpu = "29.0.3"
winit = "0.30.13"
